implemented additional APIs for retrieving Metrics configuration
